Fix spacing issue on other screens

--- a/styles.css
+++ b/styles.css
@@ -592,7 +592,7 @@ a:hover {
   .t2 {
     transform: rotate(270deg);
     padding: 0;
-    margin: 0;
+    /* margin: 0; */
     margin-left: 252px;
     margin-top: -114px;
   }
@@ -1420,7 +1420,7 @@ a:hover {
   .about-section {
     flex-direction: row-reverse;
     padding: 0 85px 0 85px;
-    margin-top: 540px;
+    margin-top: 100px;
   }
 
   .about-cta {
@@ -1678,5 +1678,11 @@ a:hover {
   .m5 {
     grid-column: 4/6;
     grid-row: 7/9;
+  }
+}
+
+@media only screen and (max-width: 1280px){
+  .about-section {
+    margin-top: 80px;
   }
 }
